# task-processor-rust

./: .dockerignore  .gitignore  .railwayignore  COMANDOS_GITHUB.txt  Cargo.toml  DEPLOY.md  Dockerfile  ENVIAR_GITHUB.sh  INSTRUCOES_GITHUB.md  Procfile  QUICKSTART.md  README.md  Railway.toml  nixpacks.toml  railway.json  setup_repo.sh
.github/workflows/: rust.yml
examples/: client_example.rs  websocket_client.html
src/: main.rs  models.rs  processor.rs  websocket.rs
src/api/: handlers.rs
tests/: integration_test.rs
