[package]
name = "task-processor"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <seu.email@example.com>"]
description = "Sistema de processamento de tarefas assíncrono com API REST e WebSockets"
license = "MIT"
repository = "https://github.com/seuusuario/task-processor"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

